--- a/index.html
+++ b/index.html
@@ -1,65 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>OnlyGirls — Coming soon</title>
+  <meta charset="UTF-8">
+  <title>XXXX Landing Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
-    :root { --text:#0f172a; --muted:#64748b; --border:#e2e8f0; }
-    * { box-sizing: border-box; }
-    body{
-      margin:0; min-height:100vh; display:grid; place-items:center;
-      font: 16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color: var(--text);
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #ffffff;
     }
-    .card{
-      width:min(720px, 92vw);
-      padding:48px 28px;
-      border:1px solid var(--border);
-      border-radius:18px;
-      box-shadow: 0 10px 30px rgba(2,6,23,.06);
-      text-align:center;
+    h1 {
+      font-size: 40px;
+      font-weight: 600;
     }
-    .logo{
-      width:72px; height:72px; border-radius:16px;
-      display:inline-grid; place-items:center;
-      border:1px solid var(--border);
-      margin:0 auto 14px;
-      font-weight:800; letter-spacing:.5px;
-    }
-    .kicker{ color: var(--muted); font-weight:600; margin:0 0 10px; }
-    h1{ margin:6px 0 10px; font-size: clamp(32px, 6vw, 44px); }
-    p{ margin:0 auto 18px; color: var(--muted); max-width: 52ch; }
-    form{ display:flex; gap:10px; justify-content:center; flex-wrap:wrap; margin-top:16px; }
-    input{
-      padding:12px 14px; min-width:260px;
-      border:1px solid var(--border); border-radius:12px;
-      font-size:16px;
-    }
-    button{
-      padding:12px 16px;
-      border:1px solid var(--text);
-      background: var(--text);
-      color:#fff; border-radius:12px;
-      font-weight:700; cursor:pointer;
-    }
-    small{ display:block; margin-top:14px; color: var(--muted); }
   </style>
 </head>
 <body>
-  <main class="card">
-    <div class="logo">OG</div>
-    <p class="kicker">Coming soon</p>
-    <h1>OnlyGirls</h1>
-    <p>Women-only community. Be the first to know when we launch.</p>
 
-    <!-- We'll connect this in Step 4 -->
-    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-      <input type="email" name="email" placeholder="you@example.com" required />
-      <button type="submit">Join the waitlist</button>
-    </form>
+  <h1>XXXX landing page</h1>
 
-    <small>No spam. Only launch updates.</small>
-  </main>
 </body>
 </html>
