--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Landing Page</title>
+  <title>XXXXXXXX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-  <h1>We Live Baby</h1>
+  <h1>Landing Page</h1>
 
 </body>
 </html>
