--- a/index.html
+++ b/index.html
@@ -2,28 +2,99 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>XXXXXXXX</title>
+  <title>XXXX — Coming Soon</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
     body {
       margin: 0;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       font-family: Arial, Helvetica, sans-serif;
       background: #ffffff;
+      color: #111;
+      line-height: 1.6;
     }
+
+    .container {
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 80px 24px;
+    }
+
     h1 {
-      font-size: 40px;
+      font-size: 42px;
+      margin-bottom: 16px;
+    }
+
+    h2 {
+      font-size: 22px;
+      margin-top: 40px;
+    }
+
+    p {
+      font-size: 18px;
+      margin-bottom: 16px;
+    }
+
+    .cta {
+      margin-top: 32px;
+    }
+
+    .cta button {
+      padding: 14px 22px;
+      font-size: 16px;
       font-weight: 600;
+      border: none;
+      background: #000;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    footer {
+      margin-top: 80px;
+      font-size: 14px;
+      color: #666;
     }
   </style>
 </head>
 <body>
 
-  <h1>Landing Page</h1>
+  <div class="container">
+    <h1>XXXX</h1>
+
+    <p>
+      XXXX is a new product I’m building to solve a simple problem:
+      <strong>people need an easier way to __________.</strong>
+    </p>
+
+    <p>
+      The idea is straightforward — instead of using complicated tools,
+      XXXX will focus on doing one thing really well.
+    </p>
+
+    <h2>What it does</h2>
+
+    <p>
+      • Helps users __________ <br>
+      • Removes the need for __________ <br>
+      • Saves time by __________
+    </p>
+
+    <h2>Why I’m building this</h2>
+
+    <p>
+      I’m building XXXX because this problem keeps coming up,
+      and existing solutions are either too complex, too expensive,
+      or don’t quite work the way they should.
+    </p>
+
+    <div class="cta">
+      <button>Join the waitlist</button>
+    </div>
+
+    <footer>
+      Coming soon.
+    </footer>
+  </div>
 
 </body>
 </html>
