--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
     :root{
       --bg: #0b0f19;
       --card: rgba(255,255,255,0.08);
+      --card2: rgba(255,255,255,0.10);
       --text: rgba(255,255,255,0.92);
       --muted: rgba(255,255,255,0.70);
       --stroke: rgba(255,255,255,0.14);
       --shadow: 0 18px 50px rgba(0,0,0,0.45);
       --radius: 22px;
-      --good: rgba(0,255,170,0.20);
-      --bad: rgba(255,95,120,0.20);
+      --good: rgba(0,255,170,0.25);
+      --bad: rgba(255,95,120,0.22);
     }
 
     * { box-sizing: border-box; }
+    html, body { height: 100%; }
     body{
       margin:0;
-      min-height:100vh;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color: var(--text);
       background:
@@ -32,39 +33,43 @@
       overflow-x:hidden;
     }
 
+    a { color: inherit; }
+
     .wrap{
-      max-width: 980px;
+      max-width: 1060px;
       margin: 0 auto;
-      padding: 72px 20px 56px;
+      padding: 56px 18px 40px;
     }
 
+    /* Top bar */
     .nav{
       display:flex;
       justify-content:space-between;
       align-items:center;
       gap:16px;
-      margin-bottom: 42px;
+      margin-bottom: 22px;
     }
 
     .brand{
       display:flex;
       align-items:center;
       gap:12px;
-      font-weight: 800;
-      letter-spacing: 0.3px;
+      font-weight: 900;
+      letter-spacing: 0.2px;
     }
 
     .logo{
       width: 42px;
       height: 42px;
       border-radius: 14px;
-      background: linear-gradient(135deg, rgba(120,95,255,0.9), rgba(0,200,255,0.7));
+      background: linear-gradient(135deg, rgba(120,95,255,0.95), rgba(0,200,255,0.7));
       box-shadow: 0 10px 30px rgba(120,95,255,0.18);
       border: 1px solid rgba(255,255,255,0.18);
       display:grid;
       place-items:center;
       font-weight: 900;
       color: rgba(255,255,255,0.95);
+      user-select: none;
     }
 
     .pill{
@@ -78,29 +83,29 @@
       white-space: nowrap;
     }
 
-    .hero{
+    /* Layout */
+    .grid{
       display:grid;
       grid-template-columns: 1.1fr 0.9fr;
-      gap: 22px;
-      align-items:stretch;
+      gap: 18px;
+      align-items:start;
     }
-
-    @media (max-width: 860px){
-      .hero{ grid-template-columns: 1fr; }
+    @media (max-width: 980px){
+      .grid{ grid-template-columns: 1fr; }
       .pill{ display:none; }
     }
 
+    /* Cards */
     .card{
       border-radius: var(--radius);
       border: 1px solid var(--stroke);
       background: linear-gradient(180deg, var(--card), rgba(255,255,255,0.06));
       box-shadow: var(--shadow);
-      padding: 28px;
+      padding: 22px;
       position: relative;
       overflow:hidden;
       backdrop-filter: blur(10px);
     }
-
     .card::before{
       content:"";
       position:absolute;
@@ -110,279 +115,10 @@
       opacity:0.9;
     }
 
+    /* Hero */
     h1{
       margin: 0 0 10px;
-      font-size: clamp(34px, 4.5vw, 52px);
-      line-height: 1.05;
-      letter-spacing: -0.8px;
-    }
+      font-size: clamp(34px, 4.5vw, 54px);
+      line-height: 1.02;
+      letter-spacing: -0.
 
-    .sub{
-      margin: 0 0 18px;
-      color: var(--muted);
-      font-size: 18px;
-      max-width: 58ch;
-    }
-
-    .bullets{
-      margin: 18px 0 0;
-      padding: 0;
-      list-style: none;
-      display:grid;
-      gap: 10px;
-      color: var(--muted);
-      font-size: 15px;
-    }
-    .bullets li{
-      display:flex;
-      gap:10px;
-      align-items:flex-start;
-    }
-    .dot{
-      width: 10px;
-      height: 10px;
-      border-radius: 999px;
-      margin-top: 6px;
-      background: rgba(255,255,255,0.7);
-      box-shadow: 0 0 0 6px rgba(255,255,255,0.06);
-      flex: 0 0 auto;
-    }
-
-    /* Form */
-    .form{
-      margin-top: 18px;
-      display:grid;
-      gap: 10px;
-    }
-
-    .field{
-      border-radius: 14px;
-      background: rgba(255,255,255,0.06);
-      border: 1px solid rgba(255,255,255,0.16);
-      padding: 12px 14px;
-    }
-
-    .field input, .field textarea, .field select{
-      width:100%;
-      border:none;
-      outline:none;
-      background: transparent;
-      color: var(--text);
-      font-size: 15px;
-      font-family: inherit;
-      resize: vertical;
-    }
-
-    .row{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 10px;
-    }
-    @media (max-width: 560px){
-      .row{ grid-template-columns: 1fr; }
-    }
-
-    .btn{
-      padding: 12px 16px;
-      border-radius: 14px;
-      border: 1px solid rgba(255,255,255,0.18);
-      background: rgba(255,255,255,0.92);
-      color: #0b0f19;
-      font-weight: 800;
-      cursor:pointer;
-      transition: transform 140ms ease, filter 140ms ease;
-    }
-    .btn:hover{ transform: translateY(-1px); filter: brightness(0.98); }
-    .btn:disabled{ opacity: 0.55; cursor:not-allowed; transform:none; }
-
-    .note{
-      margin-top: 10px;
-      color: rgba(255,255,255,0.62);
-      font-size: 13px;
-    }
-
-    .side h2{
-      margin: 0 0 10px;
-      font-size: 18px;
-      letter-spacing:-0.2px;
-    }
-
-    .step{
-      border-radius: 18px;
-      border: 1px solid rgba(255,255,255,0.12);
-      background: rgba(255,255,255,0.06);
-      padding: 14px;
-      margin-top: 10px;
-      color: var(--muted);
-      font-size: 14px;
-    }
-
-    .toast{
-      position: fixed;
-      left: 50%;
-      bottom: 18px;
-      transform: translateX(-50%);
-      background: rgba(10,14,26,0.85);
-      border: 1px solid rgba(255,255,255,0.16);
-      color: rgba(255,255,255,0.92);
-      padding: 12px 14px;
-      border-radius: 14px;
-      box-shadow: 0 16px 40px rgba(0,0,0,0.45);
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 200ms ease, transform 200ms ease;
-      font-size: 14px;
-      max-width: min(560px, 92vw);
-    }
-    .toast.show{
-      opacity: 1;
-      transform: translateX(-50%) translateY(-4px);
-    }
-    .toast.good{ border-color: var(--good); }
-    .toast.bad{ border-color: var(--bad); }
-  </style>
-</head>
-
-<body>
-  <div class="wrap">
-    <div class="nav">
-      <div class="brand">
-        <div class="logo">P</div>
-        <div>Prepay</div>
-      </div>
-      <div class="pill">Like Splitwise — but paid upfront</div>
-    </div>
-
-    <div class="hero">
-      <section class="card main" id="mainCard">
-        <h1>Split group expenses.<br/>Everyone contributes first.</h1>
-
-        <p class="sub">
-          Prepay is a simpler version of Splitwise: your group pays into a shared pot upfront,
-          spends from it, and any leftover money gets split back to everyone proportionally.
-        </p>
-
-        <!-- ✅ Formspree form (your endpoint already added) -->
-        <form class="form" id="waitlistForm" action="https://formspree.io/f/xeejoyrk" method="POST">
-
-          <!-- optional: helps you identify where submissions came from -->
-          <input type="hidden" name="source" value="Prepay landing page" />
-
-          <div class="row">
-            <div class="field">
-              <input type="text" name="name" placeholder="Name (optional)" />
-            </div>
-            <div class="field">
-              <input type="email" name="email" placeholder="Email (so I can reply)" required />
-            </div>
-          </div>
-
-          <div class="field">
-            <select name="use_case">
-              <option value="" selected>What would you use Prepay for?</option>
-              <option>Trips</option>
-              <option>House share bills</option>
-              <option>Dinners / nights out</option>
-              <option>Events / birthdays</option>
-              <option>Other</option>
-            </select>
-          </div>
-
-          <div class="field">
-            <select name="biggest_problem">
-              <option value="" selected>What’s the biggest pain point today?</option>
-              <option>People forget to pay</option>
-              <option>Awkward reminders</option>
-              <option>Uneven splits / confusion</option>
-              <option>Too much admin</option>
-              <option>Refunds / leftovers are messy</option>
-            </select>
-          </div>
-
-          <div class="field">
-            <textarea name="message" rows="4" placeholder="Any questions, feedback, or feature requests?"></textarea>
-          </div>
-
-          <button class="btn" id="submitBtn" type="submit">Join the waitlist</button>
-          <div class="note">No spam. Just launch updates. You can reply directly to my email.</div>
-        </form>
-
-        <ul class="bullets">
-          <li><span class="dot"></span><span><strong>No chasing people</strong> — everyone is settled from the start.</span></li>
-          <li><span class="dot"></span><span><strong>Fair leftovers</strong> — any remaining balance is refunded proportionally.</span></li>
-          <li><span class="dot"></span><span><strong>Best for</strong> trips, dinners, events, house shares.</span></li>
-        </ul>
-      </section>
-
-      <aside class="card side" id="sideCard">
-        <h2>How it works</h2>
-        <div class="step"><strong>1)</strong> Create a group pot for a trip / event / shared spend.</div>
-        <div class="step"><strong>2)</strong> Everyone contributes upfront (any amount or suggested split).</div>
-        <div class="step"><strong>3)</strong> Pay expenses from the pot as you go.</div>
-        <div class="step"><strong>4)</strong> Leftover balance gets refunded proportionally — automatically.</div>
-
-        <h2 style="margin-top:18px;">Why people want this</h2>
-        <div class="step">✔️ Clear budget • ✔️ Fewer awkward reminders • ✔️ Cleaner refunds</div>
-      </aside>
-    </div>
-
-    <div class="toast" id="toast">Sending…</div>
-  </div>
-
-  <script>
-    // Light-follow hover effect on cards
-    function attachGlow(card){
-      card.addEventListener("mousemove", (e) => {
-        const r = card.getBoundingClientRect();
-        const mx = ((e.clientX - r.left) / r.width) * 100;
-        const my = ((e.clientY - r.top) / r.height) * 100;
-        card.style.setProperty("--mx", mx + "%");
-        card.style.setProperty("--my", my + "%");
-      });
-    }
-    attachGlow(document.getElementById("mainCard"));
-    attachGlow(document.getElementById("sideCard"));
-
-    // Form UX: submit via fetch so we can show success without leaving the page
-    const form = document.getElementById("waitlistForm");
-    const btn = document.getElementById("submitBtn");
-    const toast = document.getElementById("toast");
-
-    function showToast(text, good=true){
-      toast.textContent = text;
-      toast.classList.remove("good","bad");
-      toast.classList.add(good ? "good" : "bad");
-      toast.classList.add("show");
-      setTimeout(() => toast.classList.remove("show"), 3200);
-    }
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      btn.disabled = true;
-      const old = btn.textContent;
-      btn.textContent = "Sending…";
-      showToast("Sending…", true);
-
-      try{
-        const res = await fetch(form.action, {
-          method: "POST",
-          body: new FormData(form),
-          headers: { "Accept": "application/json" }
-        });
-
-        if(res.ok){
-          showToast("Thanks! You’re on the waitlist ✅", true);
-          form.reset();
-        } else {
-          showToast("Hmm—something went wrong. Please try again.", false);
-        }
-      } catch(err){
-        showToast("Network error. Please try again.", false);
-      } finally {
-        btn.disabled = false;
-        btn.textContent = old;
-      }
-    });
-  </script>
-</body>
-</html>
