--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
 
           <div class="viewport">
             <div class="track" id="track">
-              <div class="slide"><img src="images/screen1.png" alt="Prepay Groups screen" /></div>
-              <div class="slide"><img src="images/screen2.png" alt="Prepay Money back screen" /></div>
-              <div class="slide"><img src="images/screen3.png" alt="Prepay Trip details screen" /></div>
+              <div class="slide"><img src="images/screen1.PNG" alt="Prepay Groups screen" /></div>
+              <div class="slide"><img src="images/screen2.PNG" alt="Prepay Money back screen" /></div>
+              <div class="slide"><img src="images/screen3.PNG" alt="Prepay Trip details screen" /></div>
             </div>
           </div>
 
